# fedorAop

./: .gitignore  IO.py  README.md  __init__.py  config.py  function.py  main.py  model.py  plot.py  pyproject.toml  requirements.txt  sample.py
doc/: Imblearn.md  ResearchProposal-chs.md  ResearchProposal-eng.md  ResearchProposal.md  TODO.md  basic sample, nn and cost-sensitive.md  researchProposal.md
fedorAop/: IO.py  config.py  function.py  io.py  main.py  model.py  plot.py  sample.py  test_imblearn.py  train_imblearn.py  trial01.py
fedorAop/models/: neural_network.py  sampling.py  train_models.py
fedorAop/test/: test_function.py  test_io.py  test_plot.py  test_sample.py  test_sample_models.py
fedorAop/test/models/: test_sampling.py
fedorAop/test/utils/: test_function.py  test_io.py  test_plot.py
fedorAop/utils/: function.py  io.py  plot.py
results/: METHOD4.json  METHOD5.json
